--- a/app/components/Navbar.module.scss
+++ b/app/components/Navbar.module.scss
@@ -3,12 +3,11 @@
   justify-content: center;
   width: 100%;
   padding: 1em 0;
-  background-color: black;
-  color: white;
+  background-color: #2c3e50;
+  color: #7f8c8d;
   max-width: 1024px;
 }
 
-.input {
-  padding: 4px 10px;
-  border-radius: 4px;
+.navbar {
+  display: flex;
 }
